--- a/css/styles.css
+++ b/css/styles.css
@@ -1344,26 +1344,19 @@ footer {
     margin: 0px;
 }
 
-//labelタグ
-.date-edit {
-  position: relative;
+.google-calendar {
+    width: 100%;
+    position: relative;
 }
- 
-//ボタン部分
-.date-edit::before {
-  background:  url(../img/now.png) no-repeat center center / cover #F7D94C;
-    border: solid 5px #cdcdcd;
+.google-calendar:before {
     content: "";
-    position: absolute;
-    top: -15px;
-    right: -65px;
-    border-radius: 28px;
-    height: 50px;
-    width: 50px;
+    display: block;
+    padding-top: 65%;
 }
- 
-//ボックス部分
-input[type="date"] {
-  padding: 10px;
-  text-align: center;
+.google-calendar iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
