--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a {
-    color: #f49500;
+    color: #ffffff;
     text-decoration: none;
     text-shadow: none;
     -webkit-transition: all 0.2s linear;
@@ -403,7 +403,7 @@ a:hover {
 }
 
 .darkBg {
-    background: #FFDBC9;
+    background: #000000;
 }
 
 
@@ -562,6 +562,10 @@ img, video, iframe, embed, object {
     float: left;
 }
 
+#features h2 {
+    color: #f49500;
+}
+
 #features h3 {
     font: 18px/34px;
     text-transform: uppercase;
@@ -574,12 +578,13 @@ img, video, iframe, embed, object {
 }
 
 #features .left {
-    padding-right: 32px;
+    padding-left: 50px;
+    padding-right: 50px;
     float: left;
 }
 
 #features .right {
-    padding-left: 32px;
+    padding-left: 50px;
     float: right;
 }
 
@@ -1225,13 +1230,6 @@ footer {
         margin: 0 0 23px 5px;
     };
 }
-@media (min-width: 751px) {
-    a[href*="tel:"] {
-        pointer-events: none;
-        cursor: default;
-        text-decoration: none;
-    }
-}
 
 #owl-demo .item {
     background: #3fbf79;
@@ -1355,15 +1353,21 @@ footer {
     width: 100%;
     position: relative;
 }
+
 .google-calendar:before {
     content: "";
     display: block;
     padding-top: 65%;
 }
+
 .google-calendar iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.list {
+    color: #FFFFFF;
 }
