--- a/css/styles.css
+++ b/css/styles.css
@@ -230,7 +230,7 @@ a:hover {
     color: #676e73;
     width: 83%;
     text-align: center;
-    margin: 10% auto 24px auto;
+    margin: 0 auto 24px auto;
 }
 
 .hero-text p {
@@ -403,6 +403,7 @@ a:hover {
 }
 /*--- Banner ----*/
 .banner-container {
+    background: #fff;
     width: 100%;
     position: relative;
     padding: 0px;
@@ -416,6 +417,7 @@ a:hover {
 }
 
 .banner-container > img {
+    background: #FFFFFF;   
     width: 100%; 
 }
 
@@ -428,7 +430,7 @@ a:hover {
 }
 
 .hero-text h1 {
-    color: #fff;
+    color: #000000;
     font-size: 6.5em;
     margin: 2% 0 30px;
     line-height: 1.2em;
@@ -443,7 +445,7 @@ a:hover {
 
 .hero-text p {
     font-size: 1.6em;
-    color: #fff;
+    color:#f49500;
     font-style: normal;
     font-family: 'Roboto', sans-serif;
     text-shadow: 1px 1px 1px #8F8F8F;
@@ -463,6 +465,14 @@ a:hover {
 .hero-img {
     text-align: center;
     margin: 10% auto 24px auto;
+}
+
+.hero-img p {
+    color: #FFFFFF;
+    font-size: 2.0em;
+    margin: 90px 0 30px;
+    line-height: 1.2em;
+    text-align: center;
 }
 
 .da-slider {
@@ -531,10 +541,11 @@ img, video, iframe, embed, object {
 /* Features
     -------------------------------------------------*/
 #features {
-    background: #fff;
+    background: #FFDBC9;
     padding-top: 35px;
     padding-bottom: 25px;
     overflow: hidden;
+    border-bottom: 2px #f49500 solid;
 }
 
 #features .feature {
@@ -543,12 +554,12 @@ img, video, iframe, embed, object {
 }
 
 #features .right {
-    padding-left: 32px;
+    padding-left: 12px;
     float: right;
 }
 
 #features .left {
-    padding-right: 32px;
+    padding-right: 12px;
     float: left;
 }
 
@@ -561,7 +572,7 @@ img, video, iframe, embed, object {
     font: 18px/34px;
     text-transform: uppercase;
     letter-spacing: 1px;
-    color: #000000;
+    color: #f49500;
 }
 
 .fluid-video-wrapper {
@@ -569,18 +580,22 @@ img, video, iframe, embed, object {
 }
 
 #features .left {
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 0px;
+    padding-right: 0px;
     float: left;
 }
 
 #features .right {
-    padding-left: 50px;
+    padding-left: 110px;
     float: right;
 }
 
-.row .six {
-    width: 50%;
+.row .three {
+    width: 65%;
+}
+
+.row .four {
+    width: 35%;
 }
 /* Services
     -------------------------------------------------*/
@@ -1249,7 +1264,7 @@ footer {
 
 .contact-parlex {
     padding-top: 0px;
-    background-image: url('../images/banner-bg.jpg');
+    background-image: url('../images/banner-bg.jpg_bk');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -1293,7 +1308,7 @@ footer {
 
 .flat .plan li {
     padding: 10px 15px;
-    color: #ccc;
+    color: #727171;
     border-top: 1px solid #f5f5f5;
     -webkit-transition: 300ms;
     transition: 300ms;
@@ -1359,5 +1374,9 @@ footer {
 }
 
 .list {
+    color: #FFFFFF;
+}
+
+.a {
     color: #FFFFFF;
 }
