--- a/css/styles.css
+++ b/css/styles.css
@@ -408,10 +408,11 @@ a:hover {
 /*--- Banner ----*/
 .banner-container {
     width: 100%;
+    height: 50%;
     position: relative;
     padding: 0px;
     box-shadow: 0px 0px 1px rgba(0,0,0,0.4);
-    /*background: url("../images/banner-bg.jpg") no-repeat;*/
+   /*background: url("../images/banner-bg.jpg") no-repeat;*/
     background-size: 100% 100%;
     background-size: cover;
     margin-top: 60px;
@@ -419,12 +420,16 @@ a:hover {
     border-bottom: 2px #f49500 solid;
 }
 
+#home {
+    background-image: url('../images/banner-bg.jpg');
+}
+
 .banner-container > img {
     width: 100%; 
 }
 
 .banner-content {
-    position: absolute;
+    position: relative;
     z-index: 3;
     top: 0px;
     left: 0px;
