--- a/css/styles.css
+++ b/css/styles.css
@@ -1037,7 +1037,7 @@ footer {
 
     .header .navbar-brand {
         padding-left: 0;
-        font-size: medium;
+        font-size: small;
     }
 
     .banner-container {
