--- a/css/styles.css
+++ b/css/styles.css
@@ -1134,7 +1134,14 @@ footer {
     };
 }
 
-@media (max-width: 480px) {
+@media screen and (max-width: 480px) {
+
+    .header .navbar-brand b {
+        padding-left: 0;
+        font-size: small;
+        color: aqua;
+    }
+
     .banner-container {
         background-size: contain;
     }
