--- a/css/styles.css
+++ b/css/styles.css
@@ -1044,8 +1044,8 @@ footer {
 
     .header .navbar-brand b {
         padding-left: 0;
-        font-size: large;
-        color: aqua;
+        font-size: x-large ;
+        color:#FFFFFF;
     }
 
     .banner-container {
@@ -1139,7 +1139,7 @@ footer {
     .header .navbar-brand b {
         padding-left: 0;
         font-size: large;
-        color: #FFFFFF;
+        color: #d62693;
     }
 
     .banner-container {
