--- a/css/styles.css
+++ b/css/styles.css
@@ -234,7 +234,7 @@ a:hover {
 }
 
 .hero-text p {
-    font: 16px/30px 'opensans-regular', sans-serif;
+    font: 50px/50px 'opensans-regular', sans-serif;
     padding: 0;
     margin: 12px 8% 0;
     text-shadow: 0px 1px 2px rgba(0, 0, 0, .2);
@@ -300,7 +300,7 @@ a:hover {
 }
 
 .navbar-brand b {
-    color: #000;
+    color: #000000;
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
 }
@@ -439,7 +439,7 @@ a:hover {
 }
 
 .hero-text p {
-    font-size: 1.6em;
+    font-size: 2.5em;
     color:#f49500;
     font-style: normal;
     font-family: 'Roboto', sans-serif;
@@ -1045,7 +1045,7 @@ footer {
     .header .navbar-brand b {
         padding-left: 0;
         font-size: x-large ;
-        color:#FFFFFF;
+        color:#000000;
     }
 
     .banner-container {
@@ -1138,8 +1138,8 @@ footer {
 
     .header .navbar-brand b {
         padding-left: 0;
-        font-size: large;
-        color: #d62693;
+        font-size: x-large;
+        color: #000000;
     }
 
     .banner-container {
