--- a/css/styles.css
+++ b/css/styles.css
@@ -1044,7 +1044,7 @@ footer {
 
     .header .navbar-brand b {
         padding-left: 0;
-        font-size: x-large ;
+        font-size: large ;
         color:#000000;
     }
 
@@ -1138,7 +1138,7 @@ footer {
 
     .header .navbar-brand b {
         padding-left: 0;
-        font-size: x-large;
+        font-size: large;
         color: #000000;
     }
 
