--- a/css/styles.css
+++ b/css/styles.css
@@ -1139,7 +1139,7 @@ footer {
     .header .navbar-brand b {
         padding-left: 0;
         font-size: large;
-        color: #000000;
+        color: #d61e1e;
     }
 
     .banner-container {
