--- a/css/styles.css
+++ b/css/styles.css
@@ -1201,7 +1201,7 @@ footer {
         display: block;
         margin: 0;
         text-align: center;
-        font-size: small
+        font-size: x-small;
     }
 
     .da-slide h2 {
