--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ License: Free to use for personal and commercial, but you need to place back lin
 body {
     height: 100%;
     font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
+    font-size:100%;
     line-height: 1.7;
     color: #666666;
     -webkit-font-smoothing: antialiased;
@@ -27,6 +27,8 @@ body {
     -webkit-transition: all 0.3s linear;
     -moz-transition: all 0.3s linear;
     -o-transition: all 0.3s linear;
+    margin: 0%;
+    padding: 0%;
 }
 
 ::selection {
@@ -145,7 +147,6 @@ a:hover {
 .copyright {
     color: #6D6D6D;
     background: #E9E9E9;
-    padding: 20px 0;
 }
 
 #top {
@@ -423,21 +424,20 @@ a:hover {
 }
 
 .hero-text h1 {
-    color:#f8f7f5;
-    font-size: 6.5em;
+    color:#f49500;
+    font-size: xx-large;
     margin: 2% 0 30px;
     line-height: 1.2em;
     font-family: 'Roboto', sans-serif;
     text-shadow: 1px 1px 1px #8F8F8F;
     font-weight: 900;
-    font-size: 48px;
     margin: 37px 0 13px;
     text-transform: uppercase;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.8);
 }
 
 .hero-text p {
-    font-size: 1.8em;
+    font-size: xx-large;
     color:#000000;
     font-style: normal;
     font-family: 'Roboto', sans-serif;
@@ -569,11 +569,21 @@ img, video, iframe, embed, object {
     text-align: center;
 }
 
+#features p {
+    color: #FFFFFF; 
+    font-size: medium;
+}
+
 #features .pos {
     color:#ffffff;
     display: block;
     margin: 0;
     text-align: center;
+    font-size: small;
+}
+
+#features .images {
+    width: 80%;
 }
 
 #features .posBlack {
@@ -601,392 +611,7 @@ img, video, iframe, embed, object {
     width: 50%;
 }
 
-/* Services
-    -------------------------------------------------*/
-.grid .text-content {
-    padding-left: 35%;
-}
 
-.grid .text-content {
-    display: block;
-    padding-left: 19%;
-    padding-right: 8%;
-}
-
-.grid .grid-item {
-}
-
-.grid .text-content h5 {
-    font-weight: bold;
-}
-
-.grid .grid-item .item-content {
-    display: block;
-    outline: none;
-    text-decoration: none;
-    padding: 20px 0;
-}
-
-.item-content .fa {
-    position: absolute;
-    color: #646464;
-    font-size: 4.5em;
-    top: 36px;
-}
-/* Team
-    ---------------------------------------------------*/
-.team-member {
-    margin-bottom: 15px;
-}
-
-.member-img {
-    overflow: hidden;
-    border: 1px solid #FFAD00;
-    padding: 5px;
-}
-
-.team-member .member-img img {
-    max-width: 250px;
-    margin: 0 auto;
-}
-
-.team-member h4 {
-    font-size: 19px;
-    line-height: 32px;
-    margin: 10px 0 0;
-    text-align: center;
-}
-
-.team-member .pos {
-    display: block;
-    margin: 0;
-    text-align: center;
-}
-
-.team-member .contact a {
-    padding: 0 8px;
-}
-
-.team-socials a {
-    background: white;
-    padding: 7px 0;
-    margin: 2px;
-}
-
-#contactUs {
-    /*background: #f49500;*/;
-}
-
-#contactUs .btn {
-    background: rgba(255, 255, 255, 0.29);
-}
-
-.descrition {
-    min-height: 90px;
-    /*text-align: center;*/
-    /*border-bottom: 1px solid #dadde2;*/
-    padding: 5px 15px;
-}
-
-.team-member {
-    padding-top: 5px;
-}
-
-.team-socials {
-    margin: 15px 0;
-    opacity: 0;
-    text-align: center;
-}
-
-.team-member:hover .team-socials {
-    opacity: 1;
-    -webkit-transition: all 1s ease;
-    -moz-transition: all 1s ease;
-    -ms-transition: all 1s ease;
-    -o-transition: all 1s ease;
-    transition: all 1s ease;
-}
-
-.team-socials i {
-    width: 35px;
-    height: 35px;
-    position: relative;
-    display: inline-block;
-    text-align: center;
-    font-size: 18px;
-}
-/* ------- */
-
-.isotopeWrapper article {
-    margin-bottom: 30px;
-}
-
-#portfolio {
-    background: #FFFFFF;
-}
-
-#portfolio img {
-    width: 100%;
-}
-
-#portfolio article p {
-    margin-bottom: 1.45em;
-        /*set next row on the baseline*/
-    ;
-}
-
-nav#filter {
-    margin-bottom: 1.5em;
-}
-
-nav#filter li {
-    display: inline-block;
-    margin: 0 0 0 5px;
-}
-
-nav#filter a {
-    padding: 4px 12px;
-    line-height: 20px;
-    border: 1px solid #f49500;
-    text-decoration: none;
-}
-
-.current {
-    background: #f49500;
-    color: #fff;
-}
-
-.portfolio-items article img {
-    width: 100%;
-}
-
-.portfolio-item {
-    display: block;
-    position: relative;
-    -webkit-transition: all 0.2s ease-in-out;
-    -moz-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-}
-
-.portfolio-item img {
-    -webkit-transition: all 300ms linear;
-    -moz-transition: all 300ms linear;
-    -o-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    transition: all 300ms linear;
-}
-
-.portfolio-item .portfolio-desc {
-    display: block;
-    opacity: 0;
-    position: absolute;
-    width: 100%;
-    left: 0;
-    top: 0;
-    color: rgba(220, 220, 220);
-}
-
-#services .col-md-3 {
-    opacity: 0;
-    width: 30%
-}
-
-.fancybox-overlay {
-    background: rgba(0, 0, 0, 0.64);
-}
-
-.portfolio-item:hover .portfolio-desc {
-    padding-top: 20%;
-    height: 100%;
-    transition: all 200ms ease-in-out 0s;
-    opacity: 1;
-    background: rgba(61, 61, 61, 0.67);
-}
-
-.portfolio-item .portfolio-desc a {
-    color: #f49500;
-    text-align: center;
-    display: block;
-}
-
-.portfolio-item .portfolio-desc a:hover {
-        /*text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.7);*/
-    text-decoration: none;
-}
-
-.portfolio-item .portfolio-desc .folio-info {
-    top: -20px;
-    padding: 30px;
-    height: 0;
-    opacity: 0;
-    position: relative;
-}
-
-.portfolio-item:hover .folio-info {
-    height: 100%;
-    opacity: 1;
-    transition: all 500ms ease-in-out 0s;
-    top: 5px;
-}
-
-.portfolio-item .portfolio-desc .folio-info h5 {
-    text-transform: uppercase;
-    text-align: center;
-    font-weight: bold;
-    font-size: 1.4em;
-}
-
-.portfolio-item .portfolio-desc .folio-info p {
-    color: #ffffff;
-    font-size: 12px;
-}
-
-.page-section.intro {
-    min-height: 600px;
-}
-
-.btn {
-    font-weight: 200;
-}
-
-.btn-dark {
-    background: #444;
-    color: #fff;
-}
-
-.btn-dark:hover {
-    background: #000;
-    color: #fff;
-}
-
-.back-to-top {
-    display: inline-block;
-    clear: both;
-    background: #fff;
-    color: #333;
-    padding: 0 10px 5px;
-    margin: 20px 0 0;
-    text-shadow: none;
-}
-
-.back-to-top:hover {
-    background: #333;
-    color: #fff;
-    text-decoration: none;
-}
-
-hr {
-    border-color: #ddd;
-}
-
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-}
-
-#navigation {
-    position: fixed;
-    top: 0;
-    right: 0;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    background: #ffffff;
-    box-shadow: 0 10px 10px -10px #000000;
-}
-
-#navigation > li {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-#navigation > li > a {
-    margin: 1px;
-    color: #000000;
-    background: #cccccc;
-    display: block;
-    padding: 5px;
-    text-decoration: none;
-    transition: all 400ms;
-}
-
-#navigation > li > a.current,
-            #navigation > li:hover > a {
-    background: #999999;
-}
-
-.pageSection {
-    min-height: 600px;
-    padding: 20px;
-    background: #dddddd;
-}
-
-.pageSection:nth-child(odd) {
-    background: #eeeeee;
-}
-
-.socialIcons li {
-    list-style: none;
-    display: inline;
-    margin-right: 6px;
-}
-
-footer {
-    border-top: 1px solid #e5e5e5;
-    padding: 45px 0;
-    background: #fff;
-}
-
-.social a:hover {
-    color: #f49500;
-}
-
-.social a {
-    font-size: 32px;
-    margin: 0 10px;
-    color: #c7c7c7;
-}
-
-.contact ul li {
-    margin-bottom: 10px;
-}
-
-.contact ul li i {
-    margin-right: 15px;
-}
-/*Clients*/
-.clients #owl-demo .item {
-    background: none;
-}
-
-.clients .helper {
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-}
-
-.clients .helper img {
-    vertical-align: middle;
-    max-height: 70px;
-    max-width: 80%;
-}
-
-.clients .helper:hover {
-    cursor: e-resize;
-}
-
-.clients .customNavigation > a {
-    font-size: 25px;
-    cursor: pointer;
-    margin: 0px 5px;
-}
-
-.portfolio-item img:hover {
-    width: 110%;
-    height: 110%;
-}
 @media (max-width: 1180px) {
 .hero-img {
     text-align: center;
@@ -1133,62 +758,12 @@ footer {
     };
 }
 
-@media (max-width:760px) {
-
-    .header .navbar-brand b {
-        padding-left: 0;
-    }
-    
-    .header .navbar-nav > li > a {
-        padding: 7px 12px;
-        font-size: 14px;
-    }
-
-    .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
-        border-color: #A8A8A8;
-    };
-}
 
 @media screen and (max-width: 480px) {
 
-    .logo {
-        font-size: large;
-        text-shadow: none;
-        padding-top: 0.8em;
-    }
-
-    .header .navbar-brand b {
-        padding-left: 0;
-        font-size: large;
-        color: #311E00;
-        padding-top: 0.8em;
-    }
-
-    .banner-container {
-        background-size: contain;
-    }
-	.banner-container > img {
-	 width: 100%;
-	 height: 200px !important;
-	}
-	.navbar-brand b { 
-	font-size: 26px;
-	}
-	.navbar-inverse .navbar-toggle { 
-	margin-top: 18px;
-	}
-    .banner-container > img {
-        width: 100%;
-        height: 140px;
-    }
-
-    .navbar {
-        min-height: 69px;
-    }
-
     .hero-text h1 {
-        color:thistle;
-        font-size: medium;
+        color:#f49500;
+        font-size: 1.3em;
         margin: 2% 0 30px;
         line-height: 1.2em;
         font-family: 'Roboto', sans-serif;
@@ -1199,168 +774,68 @@ footer {
         text-shadow: 0 1px 1px rgba(0, 0, 0, 0.8);
     }
 
+    .hero-text p {
+        font-size: 1.5em;
+        line-height: 1.3em;
+        color:#000000;
+        font-style: normal;
+        font-family: 'Roboto', sans-serif;
+        text-shadow: 1px 1px 1px #8F8F8F;
+        text-align: center;
+    }
+
     #features .pos {
         display: block;
         margin: 0;
         text-align: center;
-        font-size: x-small;
+        font-size: xx-small;
     }
 
-    .da-slide h2 {
-        font-size: 22px;
-        top: 7px;
-        text-shadow: none;
-    }
-
-    .da-slide p {
-        width: 65%;
-        top: 42px;
-        height: 50px;
-    }
-
-    #section-top ul li a {
-        height: 28px;
-        line-height: 28px;
-        width: 26px;
-    }
-
-    .team-socials a {
-        background: white;
-        padding: 1px 0;
-        margin: 2px;
-    }
-
-    .team-socials i {
-        width: 19px;
-        height: 19px;
-        position: relative;
-        display: inline-block;
-        text-align: center;
-        font-size: 16px;
-    }
-
-    .page-section {
-        padding: 0px;
-    }
-
-    .page-section h1 {
-        font-size: 3em;
-    }
-
-    .page-section h2 {
-        font-size: 2em;
-    }
-
-    .page-section p {
-        font-size: 1em;
-        margin: 0 0 20px;
-    }
-
-    .portfolio-item .portfolio-desc .folio-info h5 {
-        font-size: 11px;
-    };
-}
-
-@media (max-width: 320px) {
-    .banner-container {
-        background-size: contain;
-    }
-
-    .da-slider {
-        height: 300px;
-    }
-
-    .da-slider {
+    #features .images {
         width: 100%;
-        min-width: initial;
+    }
+
+    #features p {
+        color: #FFFFFF; 
+        font-size: small;
+    }
+
+
+    #features .flat .plan li {
+        font-size: small;
+        line-height: 50%;
+        color: #727171;
+        border-top: 1px solid #f5f5f5;
+        -webkit-transition: 300ms;
+        transition: 300ms;
+    }
+    
+    
+    #features .flat .plan li.plan-name {
+        font-size: medium;
+        color: #fff;
+        background: #f49500;
+    }
+    
+    #features .flat .plan li > strong {
+        font-size: small;
+        color: #6B6B6B;
+        font-weight: 900;
+    }
+
+    .flat .plan li.plan-action a {
+        font-size: small;
+    }
+
+    .copyright {
         position: relative;
-        margin: 0 auto;
+        bottom: 0;
+        color: #6D6D6D;
+        background: #E9E9E9;    
+        font-size: xx-small;
     }
-
-    .da-dots {
-        bottom: 2px;
-    }
-
-    .grid .text-content {
-        padding-left: 29%;
-        padding-right: 2%;
-    }
-
-    .portfolio-item:hover .folio-info {
-        top: 0px;
-    }
-
-    .portfolio-item .portfolio-desc .folio-info h5 {
-        text-transform: uppercase;
-        text-align: center;
-        font-weight: normal;
-        font-size: 10px;
-        margin: 10px 0 0 0;
-    }
-
-    nav#filter li {
-        display: inline-block;
-        margin: 0 0 23px 5px;
-    };
 }
 
-#owl-demo .item {
-    background: #3fbf79;
-    padding: 30px 0px;
-    margin: 10px;
-    color: #FFF;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    text-align: center;
-}
-
-.customNavigation {
-    text-align: center;
-}
-
-.customNavigation a {
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-.contact-parlex {
-    padding-top: 0px;
-    background-image: url('../images/banner-bg.jpg_bk');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-
-.contact-parlex h2 {
-    color: #FFFFFF;
-}
-
-.contact-parlex h3 {
-    color: #FFFFFF;
-}
-
-.contact-parlex p {
-    color: #FFFFFF;
-}
-
-.parlex-back {
-    padding: 30px 0;
-    background-color: rgba(0, 0, 0, 0.37);
-    color: #FDFDFD !important;
-}
-
-.parlex-back .heading p {
-    color: #FDFDFD;
-}
-
-#clients {
-    background: #fff;
-}
 /*Price table*/
 .flat .plan {
     border-radius: 0px;
@@ -1373,6 +848,7 @@ footer {
 }
 
 .flat .plan li {
+    font-size: small;
     padding: 10px 15px;
     color: #727171;
     border-top: 1px solid #f5f5f5;
@@ -1386,12 +862,10 @@ footer {
 
 .flat .plan li.plan-name {
     border-radius: 0;
-    padding: 15px;
-    font-size: 24px;
+    font-size: x-large;
     line-height: 24px;
-    color: #fff;
-    background: #4E4E4E;
-    margin-bottom: 30px;
+    color: rgb(255, 255, 255);
+    background: #f49500;
     border-top: 0;
 }
 
@@ -1411,38 +885,14 @@ footer {
     transform: scale(1.1);
 }
 
-.flat .plan.featured:hover li.plan-name, .flat .plan:hover li.plan-name, .flat .plan.featured.plan-name {
-    background: #f49500 !important;
-}
-
-.customNavigation {
-    display: none;
-}
-
-#clients .heading {
-    margin: 0px;
-}
-
-.isotope-item {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    opacity: 1;
-}
-
-.isotopeWrapper article {
-    margin: 0px;
-}
-
-.google-calendar {
-    width: 100%;
-    max-width: 1000px;
-}
-
 .list {
     color: #FFFFFF;
 }
 
 .a {
     color: #FFFFFF;
+}
+
+.flat .plan.featured:hover li.plan-name, .flat .plan:hover li.plan-name, .flat .plan.featured.plan-name {
+    background: #f49500 !important;
 }
