--- a/css/styles.css
+++ b/css/styles.css
@@ -186,6 +186,7 @@ footer {
     width: 100%;
     position: relative;
     padding: 0px;
+    margin-top: 3%;
     /*background: url("../images/banner-bg.jpg") no-repeat;*/
     border-bottom: 2px #f49500 solid;
 }
@@ -207,6 +208,7 @@ footer {
     color:#f49500;
     font-size: xx-large;
     line-height: 1.2em;
+    margin: 10% 0 2%;
     font-family: 'Roboto', sans-serif;
     text-shadow: 1px 1px 1px #8F8F8F;
     font-weight: 900;
@@ -474,8 +476,8 @@ img, video, iframe, embed, object {
 
     .hero-text h1 {
         color:#f49500;
-        font-size: 1.6em;
-        margin: 2% 0 2%;
+        font-size: 2.0em;
+        margin: 10% 0 2%;
         line-height: 1.2em;
         font-family: 'Roboto', sans-serif;
         text-shadow: 1px 1px 1px #8F8F8F;
@@ -485,7 +487,7 @@ img, video, iframe, embed, object {
     }
 
     .hero-text p {
-        font-size: 1.5em;
+        font-size: 1.6em;
         line-height: 1.3em;
         color:#000000;
         font-style: normal;
