--- a/css/styles.css
+++ b/css/styles.css
@@ -188,11 +188,10 @@ footer {
     padding: 0px;
     margin-top: 3%;
     /*background: url("../images/banner-bg.jpg") no-repeat;*/
-    border-bottom: 2px #f49500 solid;
 }
 
 .banner-container > img {
-    background: #FFFFFF;   
+    background: #000000;   
     width: 100%; 
 }
 
@@ -205,15 +204,14 @@ footer {
 }
 
 .hero-text h1 {
-    color:#f49500;
+    color:#FFFFFF;
     font-size: xx-large;
     line-height: 1.2em;
     margin: 10% 0 2%;
-    font-family: 'Roboto', sans-serif;
+    font-family: "ヒラギノ角ゴ ProN W6";
     text-shadow: 1px 1px 1px #8F8F8F;
     font-weight: 900;
     margin: 1% 0 13px;
-    text-transform: uppercase;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.8);
 }
 
@@ -292,12 +290,12 @@ img, video, iframe, embed, object {
     color:#ffffff;
     display: block;
     margin: 0;
-    text-align: left;
-    font-size: small;
+    text-align: center;
+    font-size: medium;
 }
 
 #features .images {
-    width: 100%;
+    width: 80%;
 }
 
 #features .posBlack {
@@ -369,14 +367,13 @@ img, video, iframe, embed, object {
 @media screen and (max-width: 480px) {
 
     .hero-text h1 {
-        color:#f49500;
+        color:#FFFFFF;
         font-size: 1.6em;
         margin: 10% 0 2%;
         line-height: 1.2em;
         font-family: 'Roboto', sans-serif;
         text-shadow: 1px 1px 1px #8F8F8F;
         font-weight: 900;
-        text-transform: uppercase;
         text-shadow: 0 1px 1px rgba(0, 0, 0, 0.8);
     }
 
@@ -404,7 +401,7 @@ img, video, iframe, embed, object {
 
     #features p {
         color: #FFFFFF; 
-        font-size: small;
+        font-size: smaller;
     }
 
     #features img {
@@ -456,7 +453,7 @@ img, video, iframe, embed, object {
 }
 
 .flat .plan li {
-    font-size: small;
+    font-size: medium;
     padding: 10px 15px;
     color: #727171;
     border-top: 1px solid #f5f5f5;
@@ -479,6 +476,7 @@ img, video, iframe, embed, object {
 
 .flat .plan li > strong {
     color: #6B6B6B;
+    font-size: medium;
     font-weight: 900;
 }
 
